<resources>
    <string name="app_name">ListsApp</string>
    <string name="home_library">Home Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="create_user">create user</string>
    <string name="sign_in">sign in</string>
    <string name="log_in">log in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">password</string>
    <string name="your_library">Your Library</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="klik_her">klik her</string>
    <string name="thumbnail">thumbnail</string>

    <string-array name="book_filters">
        <item>All</item>
        <item>Author</item>
        <item>Title</item>
        <item>Read</item>
        <item>Unread</item>
        <item>Owned</item>
        <item>Wanted</item>
    </string-array>

    <string-array name="readstatus">
        <item>read</item>
        <item>unread</item>
        <item>currently</item>
    </string-array>
</resources>