<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragment_createuser">


    <EditText
        android:id="@+id/editText_createusername"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_marginTop="324dp"
        android:autofillHints="username"
        android:background="@color/black"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/username"
        android:textColorHint="@color/beige"
        android:paddingLeft="20dp"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="148dp"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttondesign"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/sign_up"
        android:textColor="#DFDF0D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_createpassword2" />

    <EditText
        android:id="@+id/editText_createpassword"
        android:layout_width="303dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_createusername"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/editText_createpassword2"
        android:layout_width="303dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/black"
        android:textColorHint="@color/beige"
        app:layout_constraintTop_toBottomOf="@+id/editText_createpassword"
        android:paddingLeft="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>