<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.login_fragment"
    tools:ignore="ExtraText"
    android:background="@android:color/transparent">


    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="303dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:background="@color/black"
        android:hint="@string/username"
        android:textColorHint="@color/beige"
        android:textColor="@color/beige"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_username"
        tools:ignore="LabelFor"
        android:paddingStart="20dp" />

    <EditText
        android:id="@+id/editText_login_username"
        android:layout_width="303dp"
        android:layout_height="42dp"
        android:layout_marginTop="356dp"
        android:autofillHints="@string/username"
        android:background="@color/black"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/beige"
        android:textColor="@color/beige"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        android:paddingStart="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttondesign"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/log_in"
        android:textColor="#DFDF0D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_user"
        android:layout_width="145dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttondesign"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/create_user"
        android:textColor="#DFDF0D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>